--- a/Blog/OnlineStats_3.qmd
+++ b/Blog/OnlineStats_3.qmd
@@ -13,7 +13,7 @@ author:
     url: https://ctruciosm.github.io
     orcid: 0000-0001-8746-8877
 date: "2025-10-24"
-image: imagens/xxx.png
+image: imagens/estat_incrementais_3.png
 lang: pt
 format:
   html:
@@ -38,8 +38,6 @@ Isso é útil para:
 -   Acompanhar convergência de algoritmos online
 
 -   Visualizar deriva de dados (data drift)
-
--   Diagnóstico em pipelines de streaming
 :::
 
 ## Estatísticas Online + Visualização Incremental
@@ -196,5 +194,14 @@ O `MovingWindow` funciona como um "buffer móvel". Ele não acumula o histórico
 ## Conclusão
 
 :::justify
+Nas três partes deste blog, exploramos diversos recursos e conceitos do `OnlineStats.jl`. Ainda assim, tudo isso representa apenas a superfície do que esse pacote é realmente capaz de fazer.
 
+O OnlineStats se torna ainda mais poderoso quando utilizado em conjunto com outros pacotes do ecossistema Julia — seja para modelagem, visualização, análise de séries temporais ou processamento avançado de dados em fluxo contínuo.
+
+Explorem seus limites, combinem ferramentas e experimentem diferentes abordagens para alcançar resultados cada vez melhores.
+
+Obrigado por ler — e boa programação!
+:::
+::: callout-note
+Ferramentas de IA foram utilizadas para correção ortográfica e aprimoramento do texto.
 :::
