--- a/Tutoriais/tutorial_snake.qmd
+++ b/Tutoriais/tutorial_snake.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Criando do jogo Snake com Gtk4 em Julia"
+title: "Criando o jogo Snake com Gtk4 em Julia"
 description: |
   Passo a passo para a criação do clássico "jogo da cobrinha" na linguagem julia.
 categories:
