--- a/Tutoriais/tutorial_gtk4.qmd
+++ b/Tutoriais/tutorial_gtk4.qmd
@@ -5,12 +5,13 @@ description: |
 categories:
   - Pacotes
   - Ferramentas
+  - Gráficos
 author:
   - name: Gabriel Cardoso
     affiliation: "Universidade Estadual de Campinas"
     url: https://github.com/Gabriel-VC
     orcid: 0009-0001-0954-4579
-date: "2025-12-01"
+date: "2025-11-29"
 image: imagens/gvc_gtk4_logo.png
 lang: pt
 format:
